--- a/style.css
+++ b/style.css
@@ -3,3 +3,26 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img {
+  margin: auto;
+}
+header a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+#featured-property {
+  text-align: center;
+}
+#featured-property > p {
+  width: 800px;
+}
+div {
+  float: left;
+  background-color: red;
+  width: 25%;
+  text-align: center;
+}
